--- a/style.css
+++ b/style.css
@@ -75,15 +75,15 @@ body {
 }
 
 .block4 {
-  width: 100%;                /* займає половину екрану */
-  height: 50px;              /* фіксована висота */
+  width: 100%;                
+  height: 75px;              
   background: #faf0f7;
-  display: block;            /* замість flex */
+  display: block;            
   font-size: 25px;
   font-weight: bold;
-  overflow-y: auto;          /* тільки вертикальна прокрутка */
-  overflow-x: hidden;        /* горизонтальна прокрутка вимкнена */
-  padding: 5px 10px;         /* трохи відступів, щоб текст не липнув */
+  overflow-y: auto;          
+  overflow-x: hidden;        
+  padding: 5px 10px;         
   box-sizing: border-box;
 }
 
